objects/CPQB2BLog__c.object
<CustomObject>
    <description>Custom object used for storing data associated to failed mapped records from CPQB2B syncing processes.</description>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Stores the error message that occurs when a record fails to update during the CPQ/B2B syncing process.</description>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <description>Stores the process type that was executing at the time of the record error.</description>
        <label>Process Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>Represents the record id of the record that failed to update through CPQ/B2B syncing process.</description>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Stores the record Id of the source record from which data was attempted to be copied during the CPQ/B2B syncing process.</description>
        <label>Source Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Stores the error stack trace message that was generated for the failed record.</description>
        <label>Stack Trace</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Triggering_Event__c</fullName>
        <description>Stores the triggering event type of the failed record.</description>
        <label>Triggering Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Future Call</fullName>
                </value>
                <value>
                    <fullName>Platform Event</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CPQB2B Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CPQB2B Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQB2B Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>